# kernel_devices_google_zuma

./: BUILD.bazel  Kconfig.ext.zuma  build.config.zuma  constants.bzl  device.bazelrc  system_dlkm.blocklist.zuma  vendor_kernel_boot_modules.zuma  vendor_kernel_boot_modules.zuma_zebu  vendor_ramdisk.modules.zuma  zuma_defconfig
dts/: OWNERS  gs101-audio.dtsi  zuma-a0.dtsi  zuma-b0-foplp.dts  zuma-b0-ipop.dts  zuma-battery.dtsi  zuma-board-bcl.dtsi  zuma-cpu.dtsi  zuma-drm-dpu.dtsi  zuma-gpu.dtsi  zuma-ripcurrent-bcl.dtsi  zuma-ripcurrent-wcharger.dtsi  zuma-shusky-display.dtsi  zuma-usb.dtsi  zuma.dtsi
